image card ui alignment fixes

--- a/src/shared-components/imageCard/imageCard.scss
+++ b/src/shared-components/imageCard/imageCard.scss
@@ -6,23 +6,44 @@
   box-shadow: 6px 8px 16px rgba($black, 0.392);
 
   .content-details {
-    padding: 5rem 0 0;
-    height: 28rem;
+    padding: 3rem 0 0;
+    height: 36.75rem;
+    @include media-breakpoint-up(lg) {
+      padding: 5rem 0 0;
+      height: 28rem;
+    }
     .content-col {
-      flex: 0 0 50%;
-      padding-right: 2.5rem;
+      @include media-breakpoint-up(lg) {
+        flex: 0 0 50%;
+        padding-right: 2.5rem;
+      }
+
+      .site-heading {
+        text-align: center;
+        @include media-breakpoint-up(lg) {
+          text-align: left;
+        }
+      }
     }
   }
 
   .image-wrapper {
     box-shadow: 6px 8px 16px rgba($black, 0.098);
     border-radius: 0.75rem;
-    right: 0;
-    bottom: -3.5rem;
+    bottom: -1.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    @include media-breakpoint-up(lg) {
+      bottom: -3.5rem;
+      right: 0;
+    }
     img {
-      width: 36.625rem;
+      width: 20rem;
       height: auto;
       border-radius: 0.75rem;
+      @include media-breakpoint-up(lg) {
+        width: 36.625rem;
+      }
     }
   }
 }
